adicionado docker-compose

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,11 @@
 FROM python:3.9.1
+
+LABEL maintainer Diego Schmitz <diego@dschmitz.dev>
+
 WORKDIR /code
+
 COPY requirements.txt .
+
 RUN apt update
 RUN apt-get install -y postgresql-contrib
 RUN apt-get install -y libpq-dev gcc # this is required as psycopg2 uses pg_config
@@ -9,5 +14,7 @@ RUN export PATH=/usr/lib/postgresql/X.Y/bin/:$PATH
 RUN pip install psycopg2-binary
 RUN pip install psycopg2
 RUN pip install -r requirements.txt
-COPY api-smartfolio/ .
+
+COPY back/ .
+
 CMD [ "python", "./app.py" ]
