--- a/.env
+++ b/.env
@@ -3,3 +3,37 @@ FLASK_APP=main.py
 FLASK_ENV=development
 FLASK_RUN_PORT=5000
 FLASK_RUN_HOST=0.0.0.0
+
+#------------------#
+# Application Path #
+#------------------#
+APPLICATION=./htdocs
+
+#-----#
+# API #
+#-----#
+API_HOST_HTTP=5000
+
+#-------#
+# NGINX #
+#-------#
+NGINX_HOST_HTTP_PORT=80
+NGINX_HOST_HTTPS_PORT=443
+NGINX_HOST_LOG_PATH=./nginx/logs/
+NGINX_SITES_PATH=./nginx/sites/
+
+#----------#
+# POSTGRES #
+#----------#
+POSTGRES_DB=masterdatabase
+POSTGRES_USER=master
+POSTGRES_PASSWORD=laranjauva
+POSTGRES_PORT=5432
+POSTGRES_DATA=./postgresql/data/
+
+#---------#
+# PGAdmin #
+#---------#
+PGADMIN_PORT=8000
+PGADMIN_PASS=laranjauva
+PGADMIN_MAIL=master@dschmitz.dev
